translation-tool/inputs/source_meta/objects/NAD_DSS_Webservice_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>NAD_EndpointURL__c</fullName>
        <label>NAD_EndpointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAD_Password__c</fullName>
        <label>NAD_Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAD_UserName__c</fullName>
        <label>NAD_UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NAD_DSS_Webservice_Settings</label>
</CustomObject>